Change favicon, add src/assets, setup Redux file structure, move App files to src/components/App/

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/wes-favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Movie Tarcker</title>
   </head>
@@ -11,8 +11,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <!--
-      React App populates here.
-    -->
+    <!-- React App populates here. -->
   </body>
 </html>
