--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="shortcut icon" href="%PUBLIC_URL%/wes-favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Movie Tarcker</title>
+    <title>WesTracker</title>
   </head>
   <body>
     <noscript>
